--- a/main/static/less/checkin.less
+++ b/main/static/less/checkin.less
@@ -8,12 +8,13 @@ body.kiosk {
   }
   nav, footer, .navbar-collapse.collapse { display: none !important; }
   checkin-email, checkin-home, checkin-register {
-    display: block;
-    margin: 0 auto;
-    max-width: 100%;
-    text-align: center;
-    width: 450px;
+    .inner {
+      display: block;
+      margin: 0 auto;
+      text-align: center;
+      max-width: 450px;
     .btn { font-size:1.5em; }
+    }
   }
   h1 { margin-bottom: 20px; }
   p { margin-bottom: 1em; }
