styling faq slightly

--- a/main/static/less/txrx.less
+++ b/main/static/less/txrx.less
@@ -82,6 +82,9 @@ h3.block_title {
   .well {
     > :last-child { margin-bottom: 0; }
   }
+  h1 { margin-top: 10px; }
+  h2 { margin-top: 5px; }
+  p { margin-bottom: 20px; }
 }
 .well.success {
   background-color: lighten(@brand-primary,15%);
