--- a/main/templates/admin/base.html
+++ b/main/templates/admin/base.html
@@ -43,5 +43,7 @@
     top: 0;
   }
   .field-signature .controls .btn { display: none; }
+  .tabular.inline-related textarea, .form-horizontal textarea { width: 100%; }
+  .form-horizontal textarea { min-height: 200px; }
 </style>
 {% endblock %}
