--- a/redtape/templates/redtape/document.html
+++ b/redtape/templates/redtape/document.html
@@ -8,6 +8,7 @@
     <form method="POST" enctype="multipart/form-data" class="redtape">
       {{ document.content|explosivo }}
       {% csrf_token %}
+      <input type="hidden" name="next" value="{{ next }}" />
       {% include "_form.html" %}
       <center style="clear: both;">
         <input type="submit" class="btn btn-success" value="I agree to the terms and conditions">
