--- a/main/static/less/permission.less
+++ b/main/static/less/permission.less
@@ -40,7 +40,7 @@ checkbox {
   }
 }
 
-tool-checkout,search-users {
+tool-checkout,search-users, room-list {
   display: block;
   max-width: 400px;
   .btn {
