--- a/main/static/less/global.less
+++ b/main/static/less/global.less
@@ -8,6 +8,7 @@
 body { width: 100%;}
 body,html { height: 100%; overflow-x: hidden; }
 
+.fa { line-height: inheirt; }
 @media (max-width: @screen-xs-max) {
   .container{
     max-width:@screen-xs-min;
