todays-checkins now has accordion

--- a/main/static/less/checkin.less
+++ b/main/static/less/checkin.less
@@ -13,12 +13,14 @@ body.kiosk {
   p { margin-bottom: 1em; }
 }
 
-checkin-home {
+checkin-home, todays-checkins {
   display: block;
   width: 600px;
   .btn { margin-bottom: 20px; }
   h4, .messagelist, .card-title { text-align: center; }
 }
+
+
 
 /*move to another file, maybe ur forms less file */
 .ur-tooltip {
