styling tweaks to kiosk

--- a/main/static/less/checkin.less
+++ b/main/static/less/checkin.less
@@ -1,5 +1,5 @@
 body.kiosk {
-  nav, footer, .navbar-collapse.collapse { display: none !important; }
+  #mobileCart, nav, footer, .navbar-collapse.collapse { display: none !important; }
   checkin-email, checkin-home, checkin-register {
     .logo { display: block; margin: 0 auto; }
     .inner {
