--- a/main/static/less/redesign.less
+++ b/main/static/less/redesign.less
@@ -14,7 +14,7 @@ body, html {
   .collapsible-body {
     display: block;
     max-height: 0;
-    overflow: auto;
+    overflow-y: scroll;
     transition: max-height 0.25s;
     p { margin: 0; }
     .collapsible-inner { padding: 1rem; }
