--- a/main/static/less/checkin.less
+++ b/main/static/less/checkin.less
@@ -1,6 +1,6 @@
 body.kiosk {
   #mobileCart, nav, footer, .navbar-collapse.collapse { display: none !important; }
-  checkin-email, checkin-home, checkin-register {
+  maintenance, checkin-email, checkin-home, checkin-register {
     .logo { display: block; margin: 0 auto; }
     .inner {
       display: block;
@@ -13,7 +13,7 @@ body.kiosk {
   p { margin-bottom: 1em; }
 }
 
-checkin-home, todays-checkins {
+maintenance, checkin-home, todays-checkins {
   display: block;
   width: 600px;
   .btn { margin-bottom: 20px; }
