styling to modal form and ur-button classes

--- a/main/static/less/redesign.less
+++ b/main/static/less/redesign.less
@@ -8,6 +8,13 @@ body, html {
 
 @import "checkin.less";
 
+/* unrest overrides */
+modal > .inner {
+  max-width: 900px !important;
+  padding: 30px 50px;
+  ur-form form { max-width: 600px; margin: 0 auto; }
+}
+
 // materialize overrides :(
 
 .collapsible {
