--- a/main/templates/flatpages/about-us.html
+++ b/main/templates/flatpages/about-us.html
@@ -22,7 +22,7 @@
   <div class="well">
     <ul>
       <li>Become a member.  Our greatest resource is the diversity and creativity of our members, and we are always open to new perspectives and disciplines.</li>
-      <li>Volunteer!  We need people to help spread the word about what we are trying to do.  Email us at <a href="mailto:volunteer@txrxlabs.org">volunteer@txrxlabs.org</a></li>
+      <li>Volunteer!  We need people to help spread the word about what we are trying to do.  Email us at <a href="mailto:info@txrxlabs.org">info@txrxlabs.org</a></li>
       <li>Make a cash donation.</li>
       <li>Donate tools, computers, electronics.  Have a tool you don’t use that often?  We can use it!</li>
     </ul>
