active_objects now functional on UserCriterion

--- a/main/static/less/permission.less
+++ b/main/static/less/permission.less
@@ -28,14 +28,12 @@ checkbox {
   display: block;
   .alert {
     cursor: pointer;
-    display: block;
-    padding-left: 45px;
-    position: relative;
+    display: flex;
+    align-items: center;
     &.alert-warning { cursor: disabled; }
-    .fa-3x {
-      left: 5px;
-      position: absolute;
-      top: 0;
+    .fa-2x {
+      line-height: 0.8em;
+      padding-right: 10px;
     }
   }
 }
