superuser only class for admin links

--- a/main/static/less/global.less
+++ b/main/static/less/global.less
@@ -32,3 +32,8 @@ body,html { height: 100%; overflow-x: hidden; }
   .hidden246:nth-child(n+7) { display: none; }
   .hidden112:nth-child(n+3) { display: none; }
 }
+
+.superuseronly {
+  display: none;
+  .is-superuser { display: block; }
+}
