--- a/main/static/less/tool.less
+++ b/main/static/less/tool.less
@@ -26,11 +26,12 @@
     .right {
       bottom: 0;
       display: none;
-      height: 1em;
       margin: auto;
       position: absolute;
       right: 0;
       top: 0;
+      &.fa-pencil-square { right: 23px; }
+      &:before { line-height: 1; }
     }
   }
   span { display: block; padding-right: 0.25em; position: absolute; top: 0; right: 100%; }
