styling changes on me page

--- a/main/static/less/checkin.less
+++ b/main/static/less/checkin.less
@@ -15,6 +15,7 @@ body.kiosk {
 
 maintenance, checkin-home, todays-checkins {
   display: block;
+  margin: 0 auto;
   width: 600px;
   .btn { margin-bottom: 20px; }
   h4, .messagelist, .card-title { text-align: center; }
