--- a/main/static/less/txrx.less
+++ b/main/static/less/txrx.less
@@ -271,6 +271,9 @@ p,h1,h2,h3,h4,h5,h6{a{color: @link-color; }}
 
 
 /* events */
+#eventoccurrences .btn {
+  width: 110px;
+}
 .paginator {
   margin-bottom: 10px;
   position: relative;
