minor tweaks to copy

--- a/main/static/less/checkin.less
+++ b/main/static/less/checkin.less
@@ -18,7 +18,7 @@ maintenance, checkin-home, todays-checkins {
   margin: 0 auto;
   width: 600px;
   .btn { margin-bottom: 20px; }
-  h4, .messagelist, .card-title { text-align: center; }
+  h4, .messagelist { text-align: center; }
 }
 
 todays-checkins {
