mailing list link instead of artist support grant

--- a/main/templates/_side.html
+++ b/main/templates/_side.html
@@ -1,14 +1,10 @@
-{% if not "artistsupportgrant" in request.path %}
 <section>
-  <h3 class="block_title">Artist Support Grant</h3>
+  <h3 class="block_title">Join the {{ settings.SITE_NAME }} Mailing List!</h3>
   <p>
-    The {{ settings.SITE_NAME }} Artist Support Grant provides 6 months of access to the unique facilities
-    and training for which TXRX Labs is already well known to Artists allowing them to
-    further develop their practice and technique.
+    Sign up for our mailing list to stay up-to-date on current events, news, and classes at TXRX Labs.
   </p>
-  <a class="btn btn-block btn-primary" href="/artistsupportgrant">Click here to learn more</a>
+  <a class="btn btn-block btn-primary" href="http://eepurl.com/uhcT1">Click here to join</a>
 </section>
-{% endif %}
 
 <section>
   <h3 class="block_title">About {{ settings.SITE_NAME }}</h3>
