fixed ratio mixin

--- a/main/static/less/base.less
+++ b/main/static/less/base.less
@@ -2,6 +2,7 @@
 @import "bootstrap/less/mixins.less";
 @import "colors.less";
 @import "global.less";
+@import "mixins.less";
 @import "nav.less";
 @import "txrx.less";
 @import "map.less";
